--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="name">Eu sou Lethycia Krüger</div>
                 <div class="buttons">
                     <a href="https://www.linkedin.com/in/lethycia-carollyne-kr%C3%BCger-a28a8269/" class="more">Mais sobre mim</a>
-                    <a href="https://www.linkedin.com/in/lethycia-carollyne-kr%C3%BCger-a28a8269/" class="hire">Me contrate</a>
+                    <a href="https://www.linkedin.com/in/lethycia-carollyne-kr%C3%BCger-a28a8269/" class="hire">Contrate-me</a>
                 </div>
         </div>
     </section>
